--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
+@import url(./Font/Font.css);
+.hired{
+  margin: 0 20px;
+  border-top: 2px solid #000;
+  border-bottom: 2px solid #000;
+  padding: 20px;
+  font-family: 'Andada Pro', serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.hired span{
+  font-size: 26px;
+  font-weight: 700;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.hire_btn{
+  display: inline-block;
+  background-color: #000;
+  color: #fff;
+  padding: 10px;
+  margin-right: 20px;
+  margin-bottom: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  border: 2px solid #000;
+}
+/* @media screen and (max-width: 768px) {
+  .hire_btn{
+    display: block;
+    margin: 20px auto;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+} */
