--- a/src/Components/Content/Content.css
+++ b/src/Components/Content/Content.css
@@ -1,28 +1,62 @@
+@import url(./../../Font/Font.css);
 .content{
-    width: 60%;
-    min-height: 100vh;
-    position: relative;
-    margin: 50px auto;
-}
-.con-left{
-    position: relative;
-    height: 600px;
-    width: 40%;
-    float: left;
-    z-index: 0;
-}
-.con-left img{
-    width: 100%;
-    height: 80%;
     padding: 20px;
+    box-shadow: 3px 0 10px 0px #aaaaaa;
+    margin: 20px;
+    width: 300px;
+    height: 700px;
+    display: inline-block;
+    border-radius: 10px;
+    border: 1px solid #fff;
+    font-family: 'Andada Pro', serif;
 }
-.con-left::before{
-    content: '';
-    width: 100%;
+.content:hover{
+    border: 1px solid rgb(75, 193, 240);
+    box-shadow: none;
+    transition: .5s all ease-in-out;
+}
+h3{
+    margin-top: 0;
+    font-family: 'Slabo 27px', serif;
+}
+a{
+    text-decoration: none;
+    color: gray;
+}
+.con-top img{
+    width: 60%;
+    margin: 20px 20%;
     height: 100%;
-    top: 0;
-    left: 0;
-    border: 5px solid black;
-    position: absolute;
-    z-index: 5;
+    border-radius: 50%;
+    border: 1px solid #000;
 }
+.cb-details{
+    text-align: center;
+    border-bottom: 1px solid #000;
+}
+.cb-descript{
+    border-top: 1px solid #000;
+    text-align: center;
+    font-family: 'Festive', cursive;
+}
+.con-bottom button{
+    background-color: #000;
+    color: #fff;
+    padding:10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    border: 2px solid #000;
+    font-family: 'Andada Pro', serif;
+}
+button:hover{
+    background-color: #fff;
+    color: #000;
+    transition: .6s all ease-in-out;
+}
+
+/* @media screen and (max-width: 768px) {
+    .content{
+        display: block;
+        margin: 20px auto;
+    }
+} */
