--- a/src/App.css
+++ b/src/App.css
@@ -21,9 +21,9 @@
   cursor: pointer;
   border: 2px solid #000;
 }
-/* @media screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .hire_btn{
     display: block;
     margin: 20px auto;
   }
-} */
+}
