--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -5,6 +5,6 @@
     text-align: center;
     font-family: 'Slabo 27px', serif;
 }
-/* html,body {
+html,body {
     scroll-behavior: smooth;
-} */
+}
